@@ -51,6 +51,7 @@ import java.io.BufferedInputStream;
 import java.io.FileNotFoundException;
 import java.io.StringReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -341,7 +342,7 @@ public class SakaiUserProviderInstance implements UserProvider, RoleProvider {
 
     try {
       // This webservice does not require authentication
-      URL url = new URL(sakaiUrl + "/direct/user/" + userId + "/exists");
+      URL url = URI.create(sakaiUrl + "/direct/user/" + userId + "/exists").toURL();
 
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setRequestMethod("GET");
@@ -382,7 +383,7 @@ public class SakaiUserProviderInstance implements UserProvider, RoleProvider {
 
     try {
       // This webservice does not require authentication
-      URL url = new URL(sakaiUrl + "/direct/site/" + siteId + "/exists");
+      URL url = URI.create(sakaiUrl + "/direct/site/" + siteId + "/exists").toURL();
 
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setRequestMethod("GET");
@@ -403,7 +404,7 @@ public class SakaiUserProviderInstance implements UserProvider, RoleProvider {
     logger.debug("getRolesFromSakai(" + userId + ")");
     try {
 
-      URL url = new URL(sakaiUrl + "/direct/membership/fastroles/" + userId + ".xml" + "?__auth=basic");
+      URL url = URI.create(sakaiUrl + "/direct/membership/fastroles/" + userId + ".xml" + "?__auth=basic").toURL();
       String encoded = Base64.encodeBase64String((sakaiUsername + ":" + sakaiPassword).getBytes("utf8"));
 
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
@@ -465,7 +466,7 @@ public class SakaiUserProviderInstance implements UserProvider, RoleProvider {
 
     try {
 
-      URL url = new URL(sakaiUrl + "/direct/user/" + eid + ".xml" + "?__auth=basic");
+      URL url = URI.create(sakaiUrl + "/direct/user/" + eid + ".xml" + "?__auth=basic").toURL();
       logger.debug("Sakai URL: " + sakaiUrl);
       String encoded = Base64.encodeBase64String((sakaiUsername + ":" + sakaiPassword).getBytes("utf8"));
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
